hphp/hack/test/ifc/check/while.php.exp
=== IFC analysis results for while.php
File "while.php", line 38, characters 3-15:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "while.php", line 5, characters 17-25:
  This may be the data source with policy `PRIVATE`
  File "while.php", line 14, characters 19-27:
  This may be the data sink with policy `PUBLIC`
  File "while.php", line 32, characters 5-17:
  Another program point contributing to the illegal flow
File "while.php", line 51, characters 3-15:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "while.php", line 5, characters 17-25:
  This may be the data source with policy `PRIVATE`
  File "while.php", line 14, characters 19-27:
  This may be the data sink with policy `PUBLIC`
  File "while.php", line 44, characters 10-11:
  Another program point contributing to the illegal flow
  File "while.php", line 45, characters 5-17:
  Another program point contributing to the illegal flow
File "while.php", line 76, characters 5-17:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "while.php", line 5, characters 17-25:
  This may be the data source with policy `PRIVATE`
  File "while.php", line 14, characters 19-27:
  This may be the data sink with policy `PUBLIC`
  File "while.php", line 72, characters 10-11:
  Another program point contributing to the illegal flow
  File "while.php", line 73, characters 5-17:
  Another program point contributing to the illegal flow
  File "while.php", line 74, characters 5-12:
  Another program point contributing to the illegal flow
  File "while.php", line 75, characters 5-12:
  Another program point contributing to the illegal flow
File "while.php", line 63, characters 3-15:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "while.php", line 8, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "while.php", line 14, characters 19-27:
  This may be the data sink with policy `PUBLIC`
  File "while.php", line 57, characters 10-17:
  Another program point contributing to the illegal flow
  File "while.php", line 58, characters 5-11:
  Another program point contributing to the illegal flow
